# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsplan"
version = "1.0.5"
description = "Reeds-Shepp algorithm implementation in Python"
readme = "README.md"
authors = [{ name = "Built Robotics", email = "tarakapoor9@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["reeds-shepp", "path", "planning"]
dependencies = [
    "numpy >= 1.22.4",
    "matplotlib",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest"]

[tool.bumpver]
current_version = "2023.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]

